--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Launch App</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id=js-map></div>
+
+    <div id='js-map'></div>
+
+    <section>
+        <div id='js-launch-list'>
+
+        </div>
+    </section>
+    <!-- Load resources -->
     <script src="index.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAo2xUHE8t_f5J1QoASqUnZ0HOrvRPCY6Q&callback=initMap" type="text/javascript"></script>
 </body>
