Fixes the Google Map in place, moves the list of launches to the bottom of the view.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div id='js-map'></div>
-
+    <div id="js-map-outer">
+        <div id="js-map-inner"></div>
+    </div>
     <section>
-        <div id='js-launch-list'>
-
+        <div class="container">
+            <div id="js-launch-list">
+            </div>
         </div>
     </section>
     <!-- Load resources -->
