Adds functionality to scroll the list of launches so that the entry related to the clicked map marker scrolls in to view. Also refactors some code in index.html to simplify relationships and styles.css to support the changes to index.html.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div id="js-map-outer">
         <div id="js-map-inner"></div>
     </div>
-    <section>
-        <div class="container">
+    <!-- <section> -->
+        <!-- <div class="container"> -->
             <div id="js-launch-list">
             </div>
-        </div>
-    </section>
+        <!-- </div> -->
+    <!-- </section> -->
     <!-- Load resources -->
     <script src="index.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAo2xUHE8t_f5J1QoASqUnZ0HOrvRPCY6Q&callback=initMap" type="text/javascript"></script>
