Adds a custom Google Maps control and removes the default full-screen and street view controls which are not useful in this application. Also sets the default map view to terrain.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <!-- </div> -->
     <!-- </section> -->
     <!-- Load resources -->
+    <script src="custom_map_control.js"></script>
     <script src="index.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAo2xUHE8t_f5J1QoASqUnZ0HOrvRPCY6Q&callback=initMap" type="text/javascript"></script>
 </body>
