Adds basic styling to the launch list.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <!-- <section> -->
         <!-- <div class="container"> -->
-            <div id="js-launch-list">
+            <div id="js-launch-list" class="launch-list">
             </div>
         <!-- </div> -->
     <!-- </section> -->
