Cleans up comments and removes debugging statements.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li>CSS 3</li>
                 <li>Javascript</li>
                 <li>jQuery</li>
-                <li>LaunchApp icon sourced from <a href="https://www.flaticon.com/authors/dreamstale">dreamstale</a></li>
+                <li>LaunchApp icon sourced from <a href="https://www.flaticon.com/authors/dreamstale" target="_blank">dreamstale</a></li>
             </ul>
             <h2>Click anywhere to begin exploring!</h2>
             <p>LaunchApp is designed and developed in Austin, Texas by <a href="mailto:cw@chriswillia.ms">Christopher Williams</a></p>
