Updates styling for links.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img class="la-logo" src="./images/about_overlay_logo.png" alt="LaunchApp Logo" />
             <h1>LaunchApp</h1>
             <h2>Find out what's going up!</h2>
-            <p>LaunchApp is designed to let you know about upcoming rocket launches and let you explore the launch sites in a map.</p>
+            <p>LaunchApp gives you a list of upcoming space launches and lets you learn more about them in multiple ways.</p>
             <p>Launch app uses these technologies and services:</p>
             <ul>
                 <li>APIs
