Markup is more semantic. Added launch vehicle photos.

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="no-scroll">
+    <main>
     <!-- Map container -->
     <div id="js-map-outer">
         <div id="js-map-inner"></div>
     </div>
     <!-- Launch list-->
-    <div id="js-launch-list" class="launch-list">
-    </div>
+    <section id="js-launch-list" class="launch-list">
+    </section>
+    </main>
     <!-- About Overlay -->
-    <div id="js-about-overlay" class="about-overlay">
+    <section id="js-about-overlay" class="about-overlay">
         <div id="js-about-content"class="about-overlay-content">
             <img class="la-logo" src="./images/about_overlay_logo.png" alt="LaunchApp Logo" />
             <h1>LaunchApp</h1>
@@ -29,7 +31,7 @@
             <h3>Click anywhere to begin exploring!</h3>
             <p>LaunchApp is designed and developed in Austin, Texas by <a href="mailto:cw@chriswillia.ms">Christopher Williams</a></p>
         </div>
-    </div>
+    </section>
     <!-- Load resources -->
     <script src="./js/custom_map_control.js"></script>
     <script src="./js/index.js"></script>
